@@ -15,6 +15,7 @@ well as the configuration of LCDd.
 &ea65;
 &EyeboxOne;
 &g15;
+&glcd;
 &glcdlib;
 &glk;
 &hd44780;
