@@ -12,11 +12,12 @@ v0.5dev (ongoing development)
  * hd44780/serial: Fix handling of keys for LoS-Panel (M. Kirchner)
  * hd44780/serial: Change backlight handling (see commit message)
  + glcd driver: Add FreeType 2 rendering support (B. Walle and M. Dolze)
- + glcd driver: New connection type PNG, writes framebuffer as PNG image
+ + glcd driver: New connection type 'png', writes framebuffer as PNG image
  + hd44780: Fix vBars and block icon not working correctly on the same screen
  * Build system: Link LCDd itself with pthread library if available
  * lcdproc client: Unbreak build on OpenBSD non-i386 (E. Barrett)
  * lcdproc client: Fix core dumps on FreeBSD if started as non-root
+ * glcd driver: new connection type 'serdisplib'
 
 v0.5.5
  + sed1330 driver: Add support for HG25504 (L. Lagendijk)
